Implement backend social token verification and app JWT sessions

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,8 @@
 PORT=4000
 CORS_ORIGIN=http://localhost:8081
 
-# Configure these when you implement token verification:
+# Required for production auth verification/session issuance:
 GOOGLE_CLIENT_ID=
 APPLE_SERVICE_ID=
+APPLE_BUNDLE_ID=
+APP_JWT_SECRET=replace-with-a-long-random-secret
